--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,5 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode,webstorm
-/.firebase
+/.firebase/
+.env
