--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode,webstorm
 /.firebase/
 .env
+/dist/
