--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "https": "^1.0.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
