fix: create and update product with images

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
+    "react-photo-view": "^1.2.7",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
